Changed the file name

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <center>
 
 	<header>
-		<h1 id ='header'>Welcome to King's Land</h1>
-		<p id = 'royalQuestion'>Are you a royal member?</p>
+		<h1 id ='header'>Welcome to Parking</h1>
+		<p id = 'royalQuestion'>Where would you like to park?</p>
 	</header>
 
 	<main>
