--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 
     
         // Intialize our map
-        var center = new google.maps.LatLng(41.7656874,-72.680087);
+        var center = new google.maps.LatLng(51.049999, -114.066666);
         var mapOptions = {
         zoom: 8,
         center: center
