--- a/index2.html
+++ b/index2.html
@@ -97,7 +97,7 @@
         //This function will get the address or lat/long of marker that user clicked on. 
         //We can collect address or long/lat, search csv, then get availability. 
         function storeAddress(marker){
-            marker.getTitle();
+            let address = marker.getTitle();
             // call Maheen's function to show address and check in /checkout
         }
 
