--- a/indexx.html
+++ b/indexx.html
@@ -66,7 +66,7 @@
             <!-- Add more streets and parking information as needed -->
         </ul>
     </div>
-    <script>
+  <!--  <script>
         // JavaScript for search functionality
         const searchInput = document.getElementById('searchInput');
         const streetList = document.getElementById('streetList').getElementsByTagName('li');
@@ -103,5 +103,7 @@
             // Add similar logic for other streets as needed
         });
     </script>
+    -->
+    <script src="scriptt.js"></script>
 </body>
 </html>
