--- a/indexx.html
+++ b/indexx.html
@@ -162,7 +162,7 @@
                 <span class="street-name">4 Street SW</span>: <span class="parking-amount">7</span> spots available
             </li>
             <li>
-                <span class="street-name">5 Street SW</span>: <span class="parking-amount">2</span> spots available
+                <span class="street-name" class="user-selected">5 Street SW</span>: <span class="parking-amount">2</span> spots available
             </li>
             <li>
                 <span class="street-name">6 Street SW</span>: <span class="parking-amount">8</span> spots available
