--- a/indexx.html
+++ b/indexx.html
@@ -57,14 +57,15 @@
         }
         #checkInButton{
             margin-top: 10px;
+            margin-right: 10px;
+            margin-bottom: 10px;
+
             font-size: 15px;
             padding: 10px;
-            margin: 9px;
             padding-right: 5px;
             background-color: #A2E3C4;
             border-radius: 25px;
             border:3%;
-            margin-left: 100px;
 
             cursor:pointer;
             font-family: "Quicksand", sans-serif;
@@ -76,8 +77,7 @@
             margin-top: 5px;
             font-size: 15px;
             padding: 10px;
-            margin: 10px;
-            margin-left: 90px;
+            margin-left: 10px;
             background-color: #A2E3C4;
             border-radius: 25px;
             cursor:pointer;
