--- a/indexx.html
+++ b/indexx.html
@@ -56,7 +56,7 @@
             
         }
         #checkInButton{
-            margin-top: 10px;
+            margin-top: 40px;
             margin-right: 10px;
             margin-bottom: 10px;
 
@@ -74,7 +74,7 @@
         }
         #checkOutButton{
             border:3%;
-            margin-top: 5px;
+            margin-top: 50px;
             font-size: 15px;
             padding: 10px;
             margin-left: 10px;
@@ -85,7 +85,11 @@
 
 
         }
+        .locations{
+            padding-top: 40px;
+            padding-bottom:40px;
 
+        }
     </style>
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
